--- a/src/general.css
+++ b/src/general.css
@@ -6,3 +6,14 @@ body,
   margin: 0;
   overflow-x: hidden;
 }
+
+.header-toolbar a {
+  position: relative;
+  top: -8px;
+}
+
+.header-toolbar a svg {
+  position: relative;
+  top: 10px;
+  margin-left: 10px;
+}
